// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderSearchButton renders the UI snapshot correctly 1`] = `
<div
  className="css-0"
>
  <div
    data-focus-guard={true}
    style={
      {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={-1}
  />
  <div
    data-focus-guard={true}
    style={
      {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={-1}
  />
  <div
    data-focus-lock-disabled="disabled"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <button
      aria-expanded={null}
      aria-haspopup="true"
      aria-label="Open Search"
      className="chakra-button css-zndbab"
      id="searchButton"
      onClick={[Function]}
      type="button"
    >
      <span>
        Search
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          focusable={false}
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Open Search
          </title>
          <path
            clipRule="evenodd"
            d="M14.9659 14.2549H15.7559L20.7459 19.2549L19.2559 20.7449L14.2559 15.7549V14.9649L13.9859 14.6849C12.8459 15.6649 11.3659 16.2549 9.75586 16.2549C6.16586 16.2549 3.25586 13.3449 3.25586 9.75488C3.25586 6.16488 6.16586 3.25488 9.75586 3.25488C13.3459 3.25488 16.2559 6.16488 16.2559 9.75488C16.2559 11.3649 15.6659 12.8449 14.6859 13.9849L14.9659 14.2549ZM5.25586 9.75488C5.25586 12.2449 7.26586 14.2549 9.75586 14.2549C12.2459 14.2549 14.2559 12.2449 14.2559 9.75488C14.2559 7.26488 12.2459 5.25488 9.75586 5.25488C7.26586 5.25488 5.25586 7.26488 5.25586 9.75488Z"
            fillRule="evenodd"
            id="icon/action/search_24px"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    data-focus-guard={true}
    style={
      {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={-1}
  />
</div>
`;

exports[`HeaderSearchButton renders the UI snapshot correctly 2`] = `
<div
  className="css-0"
>
  <div
    data-focus-guard={true}
    style={
      {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={-1}
  />
  <div
    data-focus-guard={true}
    style={
      {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={-1}
  />
  <div
    data-focus-lock-disabled="disabled"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <button
      aria-expanded={null}
      aria-haspopup="true"
      aria-label="Open Search"
      className="chakra-button css-zndbab"
      id="searchButton"
      onClick={[Function]}
      type="button"
    >
      <span>
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          focusable={false}
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Open Search
          </title>
          <path
            clipRule="evenodd"
            d="M14.9659 14.2549H15.7559L20.7459 19.2549L19.2559 20.7449L14.2559 15.7549V14.9649L13.9859 14.6849C12.8459 15.6649 11.3659 16.2549 9.75586 16.2549C6.16586 16.2549 3.25586 13.3449 3.25586 9.75488C3.25586 6.16488 6.16586 3.25488 9.75586 3.25488C13.3459 3.25488 16.2559 6.16488 16.2559 9.75488C16.2559 11.3649 15.6659 12.8449 14.6859 13.9849L14.9659 14.2549ZM5.25586 9.75488C5.25586 12.2449 7.26586 14.2549 9.75586 14.2549C12.2459 14.2549 14.2559 12.2449 14.2559 9.75488C14.2559 7.26488 12.2459 5.25488 9.75586 5.25488C7.26586 5.25488 5.25586 7.26488 5.25586 9.75488Z"
            fillRule="evenodd"
            id="icon/action/search_24px"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    data-focus-guard={true}
    style={
      {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={-1}
  />
</div>
`;
